🐛 fix: fix issues while installing the sdk

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -21,8 +21,7 @@
     "@solana/web3.js": "^1.47.3",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.3",
-    "solana-spl-token": "npm:@solana/spl-token@0.2.0",
-    "tsconfig": "workspace:*"
+    "solana-spl-token": "npm:@solana/spl-token@0.2.0"
   },
   "devDependencies": {
     "@types/jest": "^29.1.2",
