--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@candypay/sdk",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "A TypeScript SDK for effortlessly create NFT minting functions for Candy Machine v2 collections",
   "license": "MIT",
   "main": "dist/index.js",
@@ -15,13 +15,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@metaplex-foundation/mpl-token-metadata": "^2.3.3",
-    "@project-serum/anchor": "0.17.0",
-    "@solana/spl-token": "0.1.8",
-    "@solana/web3.js": "^1.47.3",
-    "bs58": "^5.0.0",
-    "dotenv": "^16.0.3",
-    "solana-spl-token": "npm:@solana/spl-token@0.2.0"
+    "@metaplex-foundation/js": "^0.17.4",
+    "@project-serum/anchor": "0.17.0"
   },
   "devDependencies": {
     "@types/jest": "^29.1.2",
@@ -30,6 +25,8 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.8.2",
     "tsup": "^6.1.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "dotenv": "^16.0.3",
+    "bs58": "^5.0.0"
   }
 }
