--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@candypay/sdk",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A TypeScript SDK for effortlessly create NFT minting functions for Candy Machine v2 collections",
   "license": "MIT",
   "main": "dist/index.js",
@@ -16,17 +16,18 @@
   },
   "dependencies": {
     "@metaplex-foundation/js": "^0.17.4",
+    "@metaplex-foundation/mpl-token-metadata": "^2.5.1",
     "@project-serum/anchor": "0.17.0"
   },
   "devDependencies": {
     "@types/jest": "^29.1.2",
     "@types/node": "^18.0.3",
+    "bs58": "^5.0.0",
+    "dotenv": "^16.0.3",
     "jest": "^29.1.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.8.2",
     "tsup": "^6.1.3",
-    "typescript": "^4.7.4",
-    "dotenv": "^16.0.3",
-    "bs58": "^5.0.0"
+    "typescript": "^4.7.4"
   }
 }
